--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "webpack": "^4.35.3",
